[gd_scene load_steps=35 format=2]

[ext_resource path="res://Instances/UI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Instances/CellLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sounds/Music/SILENCE.wav" type="AudioStream" id=3]
[ext_resource path="res://Tilesets/TilesetMain.tres" type="TileSet" id=4]
[ext_resource path="res://Instances/Transition.tscn" type="PackedScene" id=5]
[ext_resource path="res://Instances/JumpPoint.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Objects/Dungeon 1/BossCore.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Dungeon 1/EnterTrigger.gd" type="Script" id=8]
[ext_resource path="res://Instances/System/PitController.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scripts/Objects/Dungeon 1/Fist.gd" type="Script" id=10]
[ext_resource path="res://Sprites/Props/Fists/LFist.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Props/Fists/Shadow0.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Props/Fists/Shadow1.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Props/Fists/Shadow2.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Props/Fists/Shadow3.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Props/Fists/Shadow4.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Props/Fists/Shadow5.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Props/Fists/Shadow6.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Props/Fists/Shadow7.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Props/Fists/Shadow8.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Props/Fists/Shadow9.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Props/Fists/RFist.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Characters/Temple Guardians/Torso0.png" type="Texture" id=23]
[ext_resource path="res://Instances/Objects/TorsoOrb.tscn" type="PackedScene" id=24]
[ext_resource path="res://Scenes/Dungeon 1/Switch1.gd" type="Script" id=25]
[ext_resource path="res://Sprites/Props/Switch down 3.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Props/Switch down 2.png" type="Texture" id=27]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 8, 8 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": false,
"name": "drop",
"speed": 30.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 12 ) ],
"loop": false,
"name": "lift",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 5.73882, 3.71872 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 26 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ) ],
"loop": true,
"name": "down",
"speed": 5.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 4.5, 4 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="Node2D" type="Node2D"]

_sections_unfolded = [ "Transform", "Z Index" ]

[node name="UI" parent="." index="0" instance=ExtResource( 1 )]

[node name="CellLabel" parent="." index="1" instance=ExtResource( 2 )]

text = "?1"
cell_index_x = -1
cell_index_y = -1
cell_music = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="." index="2"]

mode = 0
tile_set = ExtResource( 4 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 0, 30, 0, 1, 29, 0, 2, 24, 0, 3, 24, 0, 4, 24, 0, 5, 24, 0, 6, 24, 0, 7, 24, 0, 8, 24, 0, 9, 24, 0, 10, 24, 0, 11, 24, 0, 12, 24, 0, 13, 24, 0, 14, 24, 0, 15, 24, 0, 16, 24, 0, 17, 24, 0, 18, 28, 0, 19, 30, 0, 65536, 30, 0, 65537, 31, 0, 65538, 30, 0, 65539, 30, 0, 65540, 30, 0, 65541, 30, 0, 65542, 30, 0, 65543, 30, 0, 65544, 30, 0, 65545, 30, 0, 65546, 30, 0, 65547, 30, 0, 65548, 30, 0, 65549, 30, 0, 65550, 30, 0, 65551, 30, 0, 65552, 30, 0, 65553, 30, 0, 65554, 22, 0, 65555, 30, 0, 131072, 30, 0, 131073, 31, 0, 131074, 30, 0, 131075, 30, 0, 131076, 30, 0, 131077, 30, 0, 131078, 30, 0, 131079, 30, 0, 131080, 30, 0, 131081, 30, 0, 131082, 30, 0, 131083, 30, 0, 131084, 30, 0, 131085, 30, 0, 131086, 30, 0, 131087, 30, 0, 131088, 30, 0, 131089, 30, 0, 131090, 22, 0, 131091, 30, 0, 196608, 30, 0, 196609, 31, 0, 196610, 30, 0, 196611, 30, 0, 196612, 30, 0, 196613, 30, 0, 196614, 30, 0, 196615, 24, 0, 196616, 24, 0, 196617, 24, 0, 196618, 24, 0, 196619, 24, 0, 196620, 24, 0, 196621, 30, 0, 196622, 30, 0, 196623, 30, 0, 196624, 30, 0, 196625, 30, 0, 196626, 22, 0, 196627, 30, 0, 262144, 30, 0, 262145, 31, 0, 262146, 39, 0, 262147, 39, 0, 262148, 39, 0, 262149, 39, 0, 262150, 39, 0, 262151, 14, 0, 262152, 14, 0, 262153, 14, 0, 262154, 14, 0, 262155, 14, 0, 262156, 14, 0, 262157, 39, 0, 262158, 39, 0, 262159, 39, 0, 262160, 39, 0, 262161, 39, 0, 262162, 22, 0, 262163, 30, 0, 327680, 30, 0, 327681, 31, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 14, 0, 327688, 14, 0, 327689, 14, 0, 327690, 14, 0, 327691, 14, 0, 327692, 14, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 327698, 22, 0, 327699, 30, 0, 393216, 30, 0, 393217, 31, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 40, 0, 393224, 40, 0, 393225, 40, 0, 393226, 40, 0, 393227, 40, 0, 393228, 40, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 22, 0, 393235, 30, 0, 458752, 30, 0, 458753, 31, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 458770, 22, 0, 458771, 30, 0, 524288, 30, 0, 524289, 31, 0, 524290, 14, 0, 524291, 14, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 14, 0, 524305, 14, 0, 524306, 22, 0, 524307, 30, 0, 589824, 30, 0, 589825, 31, 0, 589826, 14, 0, 589827, 14, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 14, 0, 589841, 14, 0, 589842, 22, 0, 589843, 30, 0, 655360, 30, 0, 655361, 31, 0, 655362, 40, 0, 655363, 40, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 40, 0, 655377, 40, 0, 655378, 22, 0, 655379, 30, 0, 720896, 30, 0, 720897, 31, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 22, 0, 720915, 30, 0, 786432, 30, 0, 786433, 31, 0, 786434, 0, 0, 786435, 0, 0, 786436, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 0, 0, 786449, 0, 0, 786450, 22, 0, 786451, 30, 0, 851968, 30, 0, 851969, 31, 0, 851970, 14, 0, 851971, 14, 0, 851972, 1, 0, 851973, 1, 0, 851974, 1, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 1, 0, 851982, 1, 0, 851983, 1, 0, 851984, 14, 0, 851985, 14, 0, 851986, 22, 0, 851987, 30, 0, 917504, 30, 0, 917505, 31, 0, 917506, 40, 0, 917507, 40, 0, 917508, 1, 0, 917509, 1, 0, 917510, 1, 0, 917511, 40, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 40, 0, 917517, 1, 0, 917518, 1, 0, 917519, 1, 0, 917520, 40, 0, 917521, 40, 0, 917522, 22, 0, 917523, 30, 0, 983040, 30, 0, 983041, 31, 0, 983042, 1, 0, 983043, 1, 0, 983044, 1, 0, 983045, 1, 0, 983046, 1, 0, 983047, 1, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 1, 0, 983053, 1, 0, 983054, 1, 0, 983055, 1, 0, 983056, 1, 0, 983057, 1, 0, 983058, 22, 0, 983059, 30, 0, 1048580, 1, 0, 1048590, 1, 0 )
_sections_unfolded = [ "Cell" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Transition" parent="." index="3" instance=ExtResource( 5 )]

position = Vector2( 80, 124 )
scale = Vector2( 0.5, 0.125 )
target_scene = "res://Scenes/Dungeon 1/Dungeon1-12.tscn"
target_x = 0
target_y = 56
direction = "down"

[node name="JumpPoint9" parent="." index="4" instance=ExtResource( 6 )]

position = Vector2( 80, 68 )
scale = Vector2( 0.75, 0.125 )
distance = 30

[node name="JumpPoint10" parent="." index="5" instance=ExtResource( 6 )]

position = Vector2( 80, 44 )
scale = Vector2( 0.75, 0.125 )
required_direction = Vector2( 0, 1 )
distance = 30

[node name="JumpPoint7" parent="." index="6" instance=ExtResource( 6 )]

position = Vector2( 131.5, 104 )
scale = Vector2( 0.109375, 0.25 )
required_direction = Vector2( -1, 0 )
distance = 30

[node name="JumpPoint2" parent="." index="7" instance=ExtResource( 6 )]

position = Vector2( 59.5, 72 )
scale = Vector2( 0.109375, 0.25 )
required_direction = Vector2( -1, 0 )
distance = 30

[node name="JumpPoint8" parent="." index="8" instance=ExtResource( 6 )]

position = Vector2( 131.5, 72 )
scale = Vector2( 0.109375, 0.25 )
required_direction = Vector2( -1, 0 )
distance = 30

[node name="JumpPoint3" parent="." index="9" instance=ExtResource( 6 )]

position = Vector2( 100.5, 72 )
scale = Vector2( 0.109375, 0.25 )
required_direction = Vector2( 1, 0 )
distance = 30

[node name="JumpPoint6" parent="." index="10" instance=ExtResource( 6 )]

position = Vector2( 28.5, 72 )
scale = Vector2( 0.109375, 0.25 )
required_direction = Vector2( 1, 0 )
distance = 30

[node name="JumpPoint11" parent="." index="11" instance=ExtResource( 6 )]

position = Vector2( 24, 76.5 )
scale = Vector2( 0.25, 0.109375 )
required_direction = Vector2( 0, 1 )
distance = 30

[node name="JumpPoint12" parent="." index="12" instance=ExtResource( 6 )]

position = Vector2( 136, 76.5 )
scale = Vector2( 0.25, 0.109375 )
required_direction = Vector2( 0, 1 )
distance = 30

[node name="JumpPoint13" parent="." index="13" instance=ExtResource( 6 )]

position = Vector2( 136, 99.5 )
scale = Vector2( 0.25, 0.109375 )
distance = 30

[node name="JumpPoint14" parent="." index="14" instance=ExtResource( 6 )]

position = Vector2( 24, 99.5 )
scale = Vector2( 0.25, 0.109375 )
distance = 30

[node name="JumpPoint5" parent="." index="15" instance=ExtResource( 6 )]

position = Vector2( 28.5, 104 )
scale = Vector2( 0.109375, 0.25 )
required_direction = Vector2( 1, 0 )
distance = 30

[node name="BossCore" type="StaticBody2D" parent="." index="16"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 7 )

[node name="EnterTrigger" type="Area2D" parent="BossCore" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BossCore/EnterTrigger" index="0"]

build_mode = 0
polygon = PoolVector2Array( 56, 112, 64, 112, 64, 104, 96, 104, 96, 112, 104, 112, 104, 96, 56, 96 )

[node name="JumpPoint" parent="BossCore/EnterTrigger" index="1" instance=ExtResource( 6 )]

position = Vector2( 59.5, 104 )
scale = Vector2( 0.109375, 0.25 )
required_direction = Vector2( -1, 0 )
distance = 30

[node name="JumpPoint2" parent="BossCore/EnterTrigger" index="2" instance=ExtResource( 6 )]

position = Vector2( 100.5, 104 )
scale = Vector2( 0.109375, 0.25 )
required_direction = Vector2( 1, 0 )
distance = 30

[node name="PitController" parent="BossCore/EnterTrigger" index="3" instance=ExtResource( 9 )]

has_platform = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BossCore/EnterTrigger/PitController" index="3"]

build_mode = 0
polygon = PoolVector2Array( 55, 64, 103, 64, 103, 112, 95, 112, 95, 126, 63, 126, 63, 112, 55, 112 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossCore/EnterTrigger/PitController" index="4"]

position = Vector2( 23, 104 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D3" type="CollisionShape2D" parent="BossCore/EnterTrigger/PitController" index="5"]

position = Vector2( 135, 104 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BossCore/EnterTrigger/PitController" index="6"]

position = Vector2( 23, 72 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D4" type="CollisionShape2D" parent="BossCore/EnterTrigger/PitController" index="7"]

position = Vector2( 135, 72 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D5" type="CollisionShape2D" parent="BossCore/EnterTrigger/PitController" index="8"]

position = Vector2( 79, 40 )
scale = Vector2( 3, 1 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="LeftFist" type="KinematicBody2D" parent="BossCore" index="1"]

position = Vector2( 63, 34 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 10 )
_sections_unfolded = [ "Collision", "Pickable", "Transform" ]
speed = 50

[node name="FistSprite" type="Sprite" parent="BossCore/LeftFist" index="0"]

position = Vector2( 0, 6 )
z_index = 1
texture = ExtResource( 11 )
_sections_unfolded = [ "Transform", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="ShadowSprite" type="AnimatedSprite" parent="BossCore/LeftFist" index="1"]

position = Vector2( 0, 10 )
frames = SubResource( 2 )
animation = "lift"
_sections_unfolded = [ "Transform", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossCore/LeftFist" index="2"]

position = Vector2( 0, 9.27854 )
shape = SubResource( 7 )

[node name="Hitbox" type="Area2D" parent="BossCore/LeftFist" index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="Collider" type="CollisionShape2D" parent="BossCore/LeftFist/Hitbox" index="0"]

position = Vector2( 0, 10 )
scale = Vector2( 0.6, 0.3 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="RightFist" type="KinematicBody2D" parent="BossCore" index="2"]

position = Vector2( 97, 34 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 10 )
_sections_unfolded = [ "Transform" ]
speed = 50

[node name="FistSprite" type="Sprite" parent="BossCore/RightFist" index="0"]

position = Vector2( 0, 6 )
z_index = 1
texture = ExtResource( 22 )
_sections_unfolded = [ "Transform", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="ShadowSprite" type="AnimatedSprite" parent="BossCore/RightFist" index="1"]

position = Vector2( 0, 10 )
frames = SubResource( 2 )
animation = "lift"
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossCore/RightFist" index="2"]

position = Vector2( 0, 9.27854 )
shape = SubResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="Hitbox" type="Area2D" parent="BossCore/RightFist" index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="Collider" type="CollisionShape2D" parent="BossCore/RightFist/Hitbox" index="0"]

position = Vector2( 0, 10 )
scale = Vector2( 0.6, 0.3 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="BossCore" index="3"]

position = Vector2( 80, 24 )
texture = ExtResource( 23 )
_sections_unfolded = [ "Transform" ]

[node name="OrbSwitch" parent="BossCore" index="4" instance=ExtResource( 24 )]

position = Vector2( 80.0599, 33.9128 )
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]
is_boss = true

[node name="Switch1" type="Area2D" parent="BossCore" index="5"]

editor/display_folded = true
position = Vector2( 23.4293, 104 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 25 )
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="AnimatedSprite" parent="BossCore/Switch1" index="0"]

frames = SubResource( 4 )
animation = "up"
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossCore/Switch1" index="1"]

position = Vector2( 0.5, 0 )
shape = SubResource( 5 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Switch2" type="Area2D" parent="BossCore" index="6"]

editor/display_folded = true
position = Vector2( 135.685, 104 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 25 )
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="AnimatedSprite" parent="BossCore/Switch2" index="0"]

frames = SubResource( 4 )
animation = "up"
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossCore/Switch2" index="1"]

position = Vector2( 0.5, 0 )
shape = SubResource( 5 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Switch3" type="Area2D" parent="BossCore" index="7"]

editor/display_folded = true
position = Vector2( 135.685, 72.0189 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 25 )
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="AnimatedSprite" parent="BossCore/Switch3" index="0"]

frames = SubResource( 4 )
animation = "up"
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossCore/Switch3" index="1"]

position = Vector2( 0.5, 0 )
shape = SubResource( 5 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Switch4" type="Area2D" parent="BossCore" index="8"]

editor/display_folded = true
position = Vector2( 23.4293, 72.0189 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 25 )
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="AnimatedSprite" parent="BossCore/Switch4" index="0"]

frames = SubResource( 4 )
animation = "up"
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossCore/Switch4" index="1"]

position = Vector2( 0.5, 0 )
shape = SubResource( 5 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="BossCore" index="9"]

editor/display_folded = true
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossCore/StaticBody2D" index="0"]

position = Vector2( 80, 36 )
scale = Vector2( 1, 0.4 )
shape = SubResource( 6 )
_sections_unfolded = [ "Transform" ]

[connection signal="animation_finished" from="BossCore/LeftFist/ShadowSprite" to="BossCore/LeftFist" method="_on_animation_finished"]

[connection signal="animation_finished" from="BossCore/RightFist/ShadowSprite" to="BossCore/RightFist" method="_on_animation_finished"]

[connection signal="on_trigger" from="BossCore/OrbSwitch" to="BossCore" method="torsoHit"]


